<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">物业</string>
    <string name="rotate">旋转</string>
    <string name="SCYS">顺驰艺墅</string>
    <string name="nickname">菲达科技</string>
    <string name="account">fdkj@123??</string>
    <string name="myself">我</string>
    <string name="notification">通知</string>
    <string name="repairs">报修中心</string>
    <string name="repairsTitle">报修</string>
    <string name="home">首页</string>
    <string name="carManager">车辆管理</string>
    <string name="date">日期</string>
    <string name="textHint">您有新消息未读！</string>
    <string name="notificationHint">收到一条新的通知！</string>
    <string name="textSafety">账号与安全</string>
    <string name="textNews">新消息通知</string>
    <string name="textPrivacy">隐私</string>
    <string name="textCommon">通用</string>
    <string name="exit">退出登录</string>
    <string name="accountset">账户设置</string>
    <string name="modify">修改</string>
    <string name="add">添加</string>
    <string name="modifyAdd">修改 / 添加</string>
    <string name="change">更换</string>
    <string name="community">常驻小区</string>
    <string name="address">地址</string>
    <string name="birthday">生日</string>
    <string name="safetyLevel">账户安全等级</string>
    <string name="zhong">中</string>
    <string name="safetyLevelHint">请设置下列项目保护账号</string>
    <string name="phoneHint">已绑定手机</string>
    <string name="phone">183****6003</string>
    <string name="password">登录密码</string>
    <string name="qiang">强</string>
    <string name="security">安保问题</string>
    <string name="recommend">今日推荐</string>
    <string name="accountHint1">手机号</string>
    <string name="accountHint2">请输入手机号</string>
    <string name="pwHint1">密码</string>
    <string name="pwHint2">请输入密码</string>
    <string name="pwHintOld">请输入您的当前（旧）密码</string>
    <string name="pwHintNew">请输入您的新密码</string>
    <string name="pwHintConfirm">请再次输入您的新密码</string>
    <string name="forgetPW">忘记密码</string>
    <string name="login">登录</string>
    <string name="register">没有账号？请注册</string>
    <string name="registerT">注册</string>
    <string name="communityHint1">小区</string>
    <string name="QRcode">点击扫描二维码</string>
    <string name="houseHint1">房号</string>
    <string name="selectHouse">选择房号</string>
    <string name="nameHint1">姓名</string>
    <string name="nameET">请输入姓名</string>
    <string name="phoneHint1">手机</string>
    <string name="phoneET">请输入手机号</string>
    <string name="captchaHint1">验证码</string>
    <string name="getCaptacha">获取验证码</string>
    <string name="loginHint">已有账号，直接登录</string>
    <string name="personRepairs">个人报修</string>
    <string name="publicRepairs">公共报修</string>
    <string name="detailsInfo">请输入详细信息...</string>
    <string name="submit">提交</string>
    <string name="category">选择类别</string>
    <string name="photo">拍照</string>
    <string name="gallery">从相册选择</string>
    <string name="cancel">取消</string>
    <string name="allImg">所有图片</string>
    <string name="dropDown">◢</string>
    <string name="redPacket">红包</string>
    <string name="receiveRedPacket">领取红包</string>
    <string name="nullRedPacket">暂时没有新的红包</string>
    <string name="newRedPacket">新的红包</string>
    <string name="oldRedPacket">收到的红包</string>
    <string name="pay">物业缴费</string>
    <string name="paies">综合缴费</string>
    <string name="fee">物业费</string>
    <string name="communityAddress">小区地址</string>
    <string name="agree">同意</string>
    <string name="protocol">《自助缴费协议》</string>
    <string name="paied">已缴物业费</string>
    <string name="deal">未处理</string>
    <string name="dealed">已处理</string>
    <string name="cancelRepair">取消报修</string>
    <string name="loading">正在加载...</string>
    <string name="repairDetail">报修详情</string>
    <string name="repairInfo">报修信息</string>
    <string name="repairDescribe">报修描述</string>
    <string name="repairTYPE">报修类型</string>
    <string name="questionTYPE">问题类别</string>
    <string name="repairTime">报修时间</string>
    <string name="repairState">报修状态</string>
    <string name="evaluate">评价</string>
    <string name="grade">评分：</string>
    <string name="evaluateBtn">发表评价</string>
    <string name="evaluateHint">请评价此次维修...</string>
    <string name="online">在线咨询</string>
    <string name="feedback">咨询反馈</string>
    <string name="feedbackDetail">咨询反馈详情</string>
    <string name="yesFeedback">已反馈</string>
    <string name="noFeedback">未反馈</string>
    <string name="onlineHint">请输入您需要咨询的问题...</string>
    <string name="confirmModify">确认修改</string>
    <string name="version">版本号</string>
    <string name="evaluateUs">评价我们</string>
    <string name="modifyPW">修改密码</string>
    <string name="charge">收费</string>
    <string name="repair_bill">报修单</string>
    <string name="finish">已完成</string>
    <string name="query">查询</string>
    <string name="statistic">满意度</string>
    <string name="evaluateSatisfaction">评价统计</string>
    <string name="company">&#160;&#160;&#160;&#160;山西菲达科技有限公司成立于1997年，注册资金800万元,公司一直致力于基于物联网等现代信息技术应用的智慧城市建设事业，专注于通过三维GIS平台开展电子政务平台等各类软件应用产品的开发和研究工作，对政府、企业、个人的能够不同需求完成具有针对性的软、硬件解决方案，是业界内具有一定影响力的现代科技企业。</string>
    <string name="companyPhoneAddress">联系电话：400-125908\n地址：山西省晋中市榆次区环城西路666号</string>

    <item name="Tag_Account" type="id"></item>
    <item name="Tag_Item" type="id"></item>
    <item name="Tag_Item_First" type="id"></item>

</resources>