<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:background="@color/yello1" >

        <ImageView
            android:id="@+id/setIcon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:onClick="back"
            android:padding="10dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/charge"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topbar"
        android:layout_margin="10dp"
        android:background="@drawable/gray_pachet_top"
        android:drawableLeft="@drawable/search"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/nameET"
        android:padding="10dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_margin="10dp"
        android:background="@drawable/gray_pachet_top"
        android:drawableLeft="@drawable/search"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/phoneET"
        android:padding="10dp" >
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:layout_margin="10dp"
        android:background="@drawable/exit_btn"
        android:padding="10dp"
        android:text="@string/query"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>