<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/yello1" >

        <ImageView
            android:id="@+id/setIcon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:onClick="back"
            android:padding="10dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/accountset"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topbar" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RelativeLayout
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/myself_bg"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    android:id="@+id/accountText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:drawableLeft="@drawable/me"
                    android:drawablePadding="10dp"
                    android:text="@string/account"
                    android:textColor="@color/gray2"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/accountText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/arrows_gray"
                    android:text="@string/modify"
                    android:textColor="@color/yello1"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/community"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account"
                android:layout_marginTop="-5dp"
                android:background="@drawable/myself_bg"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    android:id="@+id/communityText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:drawableLeft="@drawable/community"
                    android:drawablePadding="10dp"
                    android:text="@string/community"
                    android:textColor="@color/gray2"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/communityText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/arrows_gray"
                    android:text="@string/add"
                    android:textColor="@color/yello1"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/community"
                android:layout_marginTop="-5dp"
                android:background="@drawable/myself_bg"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    android:id="@+id/addressText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:drawableLeft="@drawable/address"
                    android:drawablePadding="10dp"
                    android:text="@string/address"
                    android:textColor="@color/gray2"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/addressText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/arrows_gray"
                    android:text="@string/modifyAdd"
                    android:textColor="@color/yello1"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address"
                android:layout_marginTop="-5dp"
                android:background="@drawable/myself_bg"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    android:id="@+id/birthdayText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:drawableLeft="@drawable/birthday"
                    android:drawablePadding="10dp"
                    android:text="@string/birthday"
                    android:textColor="@color/gray2"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/birthdayText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/arrows_gray"
                    android:text="@string/add"
                    android:textColor="@color/yello1"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/safetyLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/birthday"
                android:layout_marginTop="20dp"
                android:background="@drawable/myself_bg"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <TextView
                    android:id="@+id/safetyLevelText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/safetyLevel"
                    android:textColor="@color/gray2"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/safetyLevelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/safetyLevelText1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/zhong"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/safetyLevelText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/safetyLevelHint"
                    android:textColor="@color/gray2"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/oldPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/safetyLevel"
                android:layout_marginTop="-5dp"
                android:background="@drawable/myself_bg"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    android:id="@+id/phoneText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:drawableLeft="@drawable/phone"
                    android:drawablePadding="10dp"
                    android:text="@string/phoneHint"
                    android:textColor="@color/gray2"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/phoneText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/phoneText1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/phone"
                    android:textColor="@color/gray2"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/phoneText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/arrows_gray"
                    android:text="@string/change"
                    android:textColor="@color/yello1"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/oldPw"
                android:layout_marginTop="-5dp"
                android:background="@drawable/myself_bg"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    android:id="@+id/passwordText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="10dp"
                    android:text="@string/password"
                    android:textColor="@color/gray2"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/passwordText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/passwordText1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/qiang"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/passwordText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/arrows_gray"
                    android:text="@string/modify"
                    android:textColor="@color/yello1"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/security"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newPassword"
                android:layout_marginTop="-5dp"
                android:background="@drawable/myself_bg"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    android:id="@+id/securityText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:drawableLeft="@drawable/security"
                    android:drawablePadding="10dp"
                    android:text="@string/security"
                    android:textColor="@color/gray2"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/securityText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:drawablePadding="10dp"
                    android:drawableRight="@drawable/arrows_gray"
                    android:text="@string/modify"
                    android:textColor="@color/yello1"
                    android:textSize="18sp" />
            </RelativeLayout>

            <!--
                 <Button
                android:id="@+id/exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/security"
                android:layout_margin="10dp"
                android:background="@drawable/exit_btn"
                android:onClick="exit"
                android:text="@string/exit"
                android:textColor="@color/white" />
            -->
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>