<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray3" >

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/yello1" >

        <ImageView
            android:id="@+id/setIcon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:onClick="back"
            android:padding="10dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/modifyPW"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topbar"
        android:scrollbars="none" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                android:background="@color/white"
                android:hint="@string/pwHintOld"
                android:inputType="textPassword"
                android:maxLength="11"
                android:padding="15dp"
                android:singleLine="true"
                android:textSize="18sp" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/captcha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:hint="@string/pwHintNew"
                android:inputType="textPassword"
                android:padding="15dp"
                android:singleLine="true"
                android:textSize="18sp" >
            </EditText>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/captcha"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:hint="@string/pwHintConfirm"
                android:inputType="textPassword"
                android:padding="15dp"
                android:singleLine="true"
                android:textSize="18sp" >
            </EditText>

            <TextView
                android:id="@+id/modifyPW"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/password"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/exit_btn"
                android:gravity="center"
                android:text="@string/confirmModify"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>