<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray3" >

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/yello1" >

        <ImageView
            android:id="@+id/setIcon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:onClick="back"
            android:padding="10dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/forgetPW"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topbar"
        android:scrollbars="none" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/oldPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                android:background="@color/white"
                android:hint="@string/phoneET"
                android:inputType="number"
                android:maxLength="11"
                android:padding="15dp"
                android:singleLine="true"
                android:textSize="18sp" >

                <requestFocus />
            </EditText>

            <RelativeLayout
                android:id="@+id/newPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/oldPw"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:inputType="number" >

                <TextView
                    android:id="@+id/getCaptacha"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/login_bg"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/getCaptacha"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/captchaET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_toRightOf="@id/getCaptacha"
                    android:background="@color/white"
                    android:hint="@string/captchaHint1"
                    android:inputType="number"
                    android:maxLength="6"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:textSize="18sp" >
                </EditText>
            </RelativeLayout>

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/newPw"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:hint="@string/pwHint2"
                android:inputType="textPassword"
                android:padding="15dp"
                android:singleLine="true"
                android:textSize="18sp" >
            </EditText>

            <TextView
                android:id="@+id/modifyPW"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/newPassword"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/exit_btn"
                android:gravity="center"
                android:text="@string/confirmModify"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>